--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ukize233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ukize233/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ukize233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ukize233/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ukize233/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781970.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/20200110888-320x200.jpg">英媒：台湾大选决定中台关系 具全球影响力</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781408.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/7ab9f28ff9492ecbf0c84d14396a0f33-320x200.jpeg">【独家】专访郑文杰: 被虐待至精神崩溃（三）</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11768058.md#1">习近平谈中共领导人更替 接班人制再引关注</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11772655.md#1">【新闻看点】习突换人 骆惠宁记者会为何颤抖</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11770292.md#1">苏州十全街发生大面积塌陷 店铺已搬空</a><br>
@@ -33,7 +33,6 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781943.md#1">四川“美女市长”江建君贪腐细节曝光</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播预告】决战2020 台湾总统选前之夜</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781462.md#1">电影《中国女排》引争议 前主教练要求删镜头</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781408.md#1">【独家】专访郑文杰: 被虐待至精神崩溃（三）</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781010.md#1">【拍案惊奇】伊朗导弹是元凶 德黑兰坠机记实</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781279.md#1">【翻墙必看】中南海官员透露中共高层秘密</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781366.md#1">受贿额巨大 吉林女厅官翟宪枝获刑20年</a><br>
@@ -42,9 +41,11 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781258.md#1">亲属遭中共骚扰 郑文杰宣布与家属断绝关系</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11780977.md#1">视频：乌航客机疑被伊朗导弹击中瞬间</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780832.md#1">假货太多 大陆现“山寨手机品牌排行榜”</a><br>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780506.md#1">中南海大秘：中共高层心灰意懒 出工不出力</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11782135.md#1">香港人在台北举标语 呼吁民众投票守护台湾</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780208.md#1">《假孔子之名》导演：盼台湾壮大助中国人</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781419.md#1">猪肉价涨97% 大陆12月CPI维持8年高位</a><br>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781970.md#1">英媒：台湾大选决定中台关系 具全球影响力</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781769.md#1">广东一商铺着火 2儿童烧死 3大人逃生</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781586.md#1">操场埋尸案二审维持原判 杜少平仍判死刑</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781184.md#1">中国最大车用灯厂从大陆撤资回台建厂</a><br>
@@ -53,7 +54,6 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781156.md#1">一晚做8套试题 湖南小学生出现精神异常</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780767.md#1">黄耀明悼念大卫?鲍伊 宣布达明一派3月开唱</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780860.md#1">辽宁公安厅官落马 曾被举报当涉黑保护伞</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780506.md#1">中南海大秘：中共高层心灰意懒 出工不出力</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779986.md#1">美议员：台湾应透过选举对中共说“不”</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780385.md#1">【新闻看点】王立强爆遭威胁 台大选狂澜骤起</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780326.md#1">晒与母亲合照宣传新片 徐峥不再以光头示人</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ukize233/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,566,341 人
+- 共 349,571,620 人
 ```
 </strong>
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
